--- a/css/splash.css
+++ b/css/splash.css
@@ -84,6 +84,8 @@ strong { color: #666; }
   right: 0;
   opacity: 1;
   z-index: 100;
+}
+.pathospot-splash.fixed-header .header-links {
   -webkit-transform: translateY(-100%);
   -ms-transform: translateY(-100%);
   transform: translateY(-100%);
