--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,36 @@ input[type="range"].range { display: none; }
 }
 .toggle-btn.active:hover + .toggle-btn { border-left-color: #d4dbe0; }
 
+.tutorial-btn {
+  display: inline-block;
+  color: #fff;
+  padding: 0.7em 1em;
+  cursor: pointer;
+  text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
+  border: 1px solid #ccc;
+  background-color: #5a5abf;
+  background-image: linear-gradient(to bottom, #6969c2, #4848B8);
+  background-repeat: repeat-x;
+  border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0,0,0,0.25);
+  border-radius: 8px;
+  box-shadow: inset 0 1px 0 rgba(255,255,255,0.2), 0 1px 2px rgba(0,0,0,0.05);
+}
+
+.tutorial-btn:hover {
+  background-color: #4848B8;
+  text-decoration: none;
+  background-position: 0 -15px;
+  transition: background-position .1s linear;
+}
+
+.tutorial-btn:active {
+  color: #fff;
+  background-color: #4848B8;
+  background-image: none;
+  outline: 0;
+  box-shadow: inset 0 2px 4px rgba(0,0,0,0.15), 0 1px 2px rgba(0,0,0,0.05);
+}
+
 .no-display {
   display: none;
 }
@@ -125,6 +155,7 @@ input[type="range"].range { display: none; }
 }
 #cluster-legend {
   display: none;
+  margin-top: -2px;
 }
 #cluster-legend a .icon {
   padding-right: 0.3em;
@@ -150,24 +181,18 @@ input[type="range"].range { display: none; }
 }
 
 #cluster-list {
-  position: relative;
-  top: -1px;
-  margin-left: 12px;
+  vertical-align: middle;
+  margin-left: 6px;
 }
 
-#cluster-list a {
-  color: white;
-  display: inline-block;
-  font-size: 12px;
-  min-width: 20px;
-  height: 20px;
-  line-height: 20px;
-  margin-right: 3px;
-  text-align: center;
-  -webkit-print-color-adjust: exact;
+#cluster-list rect, #cluster-list text {
+  cursor: pointer;
 }
-#cluster-list a:link {
-  text-decoration: none;
+
+#cluster-list text {
+  fill: white;
+  font-size: 12px;
+  font-weight: bold;
 }
 
 
@@ -764,7 +789,7 @@ text.axis-label {
 
 .link-info {
   border-collapse: collapse;
-  margin-bottom: 0.5em;
+  margin: 0 auto 0.5em;
 }
 
 .link-info th, .link-info td {
