--- a/css/splash.css
+++ b/css/splash.css
@@ -58,6 +58,7 @@ strong { color: #666; }
   -moz-box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.2);
   box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.2);
   backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
 }
 .header-links a {
   padding: 0 0.75em;
