--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,7 @@ input[type="range"].range { display: none; }
   -moz-box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.1);
   box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.1);
   backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
 }
 
 .loading-text {
