--- a/css/style.css
+++ b/css/style.css
@@ -956,6 +956,62 @@ text.axis-label {
   margin-bottom: 0.5em;
 }
 
+.d3-tip .first-time {
+  font-size: 14px;
+  text-align: center;
+}
+
+.d3-tip-bouncein-up {
+  -webkit-animation: bouncein-up 1000ms linear both;
+  animation: bouncein-up 1000ms linear both;
+}
+
+/* Generated with Bounce.js. Edit at http://bouncejs.com#%7Bs%3A%5B%7BT%3A%22t%22%2Ce%3A%22b%22%2Cd%3A1000%2CD%3A0%2Cf%3A%7Bx%3A0%2Cy%3A300%7D%2Ct%3A%7Bx%3A0%2Cy%3A0%7D%2Cs%3A3%2Cb%3A4%7D%2C%7BT%3A%22c%22%2Ce%3A%22s%22%2Cd%3A500%2CD%3A0%2Cf%3A%7Bx%3A1%2Cy%3A1%7D%2Ct%3A%7Bx%3A1%2Cy%3A5%7D%2Cs%3A5%2Cb%3A4%7D%5D%7D */
+
+@-webkit-keyframes bouncein-up { 
+  0% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 300, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 300, 0, 1); }
+  1.3% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1.83, 0, 0, 0, 0, 1, 0, 0, 251.707, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1.83, 0, 0, 0, 0, 1, 0, 0, 251.707, 0, 1); }
+  2.55% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 2.015, 0, 0, 0, 0, 1, 0, 0, 205.677, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 2.015, 0, 0, 0, 0, 1, 0, 0, 205.677, 0, 1); }
+  4.3% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1.831, 0, 0, 0, 0, 1, 0, 0, 145.719, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1.831, 0, 0, 0, 0, 1, 0, 0, 145.719, 0, 1); }
+  5.71% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1.583, 0, 0, 0, 0, 1, 0, 0, 103.603, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1.583, 0, 0, 0, 0, 1, 0, 0, 103.603, 0, 1); }
+  8.61% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1.184, 0, 0, 0, 0, 1, 0, 0, 36.424, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1.184, 0, 0, 0, 0, 1, 0, 0, 36.424, 0, 1); }
+  8.81% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1.166, 0, 0, 0, 0, 1, 0, 0, 32.809, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1.166, 0, 0, 0, 0, 1, 0, 0, 32.809, 0, 1); }
+  11.96% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1.01, 0, 0, 0, 0, 1, 0, 0, -8.386, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1.01, 0, 0, 0, 0, 1, 0, 0, -8.386, 0, 1); }
+  12.91% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 0.995, 0, 0, 0, 0, 1, 0, 0, -15.683, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 0.995, 0, 0, 0, 0, 1, 0, 0, -15.683, 0, 1); }
+  15.07% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 0.985, 0, 0, 0, 0, 1, 0, 0, -25.396, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 0.985, 0, 0, 0, 0, 1, 0, 0, -25.396, 0, 1); }
+  17.22% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 0.989, 0, 0, 0, 0, 1, 0, 0, -28, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 0.989, 0, 0, 0, 0, 1, 0, 0, -28, 0, 1); }
+  27.58% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -7.582, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -7.582, 0, 1); }
+  28.33% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -6.188, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -6.188, 0, 1); }
+  39.44% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1.869, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1.869, 0, 1); }
+  40.09% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1.855, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1.855, 0, 1); }
+  50% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.481, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.481, 0, 1); }
+  61.66% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -0.125, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -0.125, 0, 1); }
+  83.98% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.008, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.008, 0, 1); }
+  100% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); } 
+}
+
+@keyframes bouncein-up { 
+  0% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 300, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 300, 0, 1); }
+  1.3% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1.83, 0, 0, 0, 0, 1, 0, 0, 251.707, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1.83, 0, 0, 0, 0, 1, 0, 0, 251.707, 0, 1); }
+  2.55% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 2.015, 0, 0, 0, 0, 1, 0, 0, 205.677, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 2.015, 0, 0, 0, 0, 1, 0, 0, 205.677, 0, 1); }
+  4.3% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1.831, 0, 0, 0, 0, 1, 0, 0, 145.719, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1.831, 0, 0, 0, 0, 1, 0, 0, 145.719, 0, 1); }
+  5.71% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1.583, 0, 0, 0, 0, 1, 0, 0, 103.603, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1.583, 0, 0, 0, 0, 1, 0, 0, 103.603, 0, 1); }
+  8.61% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1.184, 0, 0, 0, 0, 1, 0, 0, 36.424, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1.184, 0, 0, 0, 0, 1, 0, 0, 36.424, 0, 1); }
+  8.81% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1.166, 0, 0, 0, 0, 1, 0, 0, 32.809, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1.166, 0, 0, 0, 0, 1, 0, 0, 32.809, 0, 1); }
+  11.96% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1.01, 0, 0, 0, 0, 1, 0, 0, -8.386, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1.01, 0, 0, 0, 0, 1, 0, 0, -8.386, 0, 1); }
+  12.91% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 0.995, 0, 0, 0, 0, 1, 0, 0, -15.683, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 0.995, 0, 0, 0, 0, 1, 0, 0, -15.683, 0, 1); }
+  15.07% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 0.985, 0, 0, 0, 0, 1, 0, 0, -25.396, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 0.985, 0, 0, 0, 0, 1, 0, 0, -25.396, 0, 1); }
+  17.22% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 0.989, 0, 0, 0, 0, 1, 0, 0, -28, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 0.989, 0, 0, 0, 0, 1, 0, 0, -28, 0, 1); }
+  27.58% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -7.582, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -7.582, 0, 1); }
+  28.33% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -6.188, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -6.188, 0, 1); }
+  39.44% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1.869, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1.869, 0, 1); }
+  40.09% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1.855, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1.855, 0, 1); }
+  50% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.481, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.481, 0, 1); }
+  61.66% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -0.125, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -0.125, 0, 1); }
+  83.98% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.008, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.008, 0, 1); }
+  100% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); } 
+}
+
 
 /* =========================== */
 /* = INTRO.JS CUSTOMIZATIONS = */
@@ -966,11 +1022,23 @@ text.axis-label {
 }
 
 .pathospot-heatmap .introjs-tooltiptext ul {
-  padding-left: 20px;
+  padding-left: 12px;
+  margin: 0;
+  list-style-type: none;
 }
 
-.pathospot-heatmap .introjs-tooltiptext ul li {
+.pathospot-heatmap .introjs-tooltiptext ul > li {
   margin-bottom: 0.8em;
+  padding-left: 0;
+}
+
+.pathospot-heatmap .introjs-tooltiptext ul > li:before {
+  content: "–";
+  text-indent: 0;
+  display: inline-block;
+  width: 0;
+  position: relative;
+  left: -12px;
 }
 
 .pathospot-heatmap .introjs-tooltiptext .black-bars {
